new scripts to fix console boot env

--- a/package/linino/yun-scripts/Makefile
+++ b/package/linino/yun-scripts/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yun-scripts
 PKG_VERSION:=1.1
-PKG_RELEASE:=4
+PKG_RELEASE:=5
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -58,6 +58,7 @@ define Package/yun-scripts/install
 	$(INSTALL_BIN) ./files/usr/bin/tst $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/tsto $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/lininoio $(1)/usr/bin
+	$(INSTALL_BIN) ./files/usr/bin/detect-console $(1)/usr/bin
 
 	$(INSTALL_BIN) ./files/etc/init.d/rename-wifi-if-access-point $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
@@ -68,7 +69,7 @@ define Package/yun-scripts/install
 	$(INSTALL_BIN) ./files/etc/init.d/avahifixboot $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/mcuio $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/rename-iface $(1)/etc/init.d
-
+	$(INSTALL_BIN) ./files/etc/init.d/console $(1)/etc/init.d
 endef
 
 $(eval $(call BuildPackage,yun-scripts))
