avrdude: change reset pin to gpio17

--- a/package/linino/avrdude/files/avrdude.conf
+++ b/package/linino/avrdude/files/avrdude.conf
@@ -1001,7 +1001,7 @@ programmer
   id    = "linuxgpio-chow";
   desc  = "Use the Linux sysfs interface to bitbang GPIO lines";
   type  = "linuxgpio";
-  reset = ~1;
+  reset = 17;
   sck   = 4;
   mosi = 2;
   miso  = 3;
