adding flash-kl25z and flash-samd21 to yun-scripts package

--- a/package/linino/yun-scripts/Makefile
+++ b/package/linino/yun-scripts/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yun-scripts
 PKG_VERSION:=1.1
-PKG_RELEASE:=5
+PKG_RELEASE:=6
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -59,6 +59,8 @@ define Package/yun-scripts/install
 	$(INSTALL_BIN) ./files/usr/bin/tsto $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/lininoio $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/detect-console $(1)/usr/bin
+	$(INSTALL_BIN) ./files/usr/bin/flash-kl25z $(1)/usr/bin
+	$(INSTALL_BIN) ./files/usr/bin/flash-samd21 $(1)/usr/bin
 
 	$(INSTALL_BIN) ./files/etc/init.d/rename-wifi-if-access-point $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
