--- a/package/linino/ajtcl/Makefile
+++ b/package/linino/ajtcl/Makefile
@@ -1,21 +1,20 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ajtcl
-# PKG_REVISION:=c7246570b10c70913c2b983b5f9353672908f73d
-PKG_VERSION:=14.12
+PKG_VERSION:=15.04a
 PKG_RELEASE:=1
 PKG_MD5SUM:=
 
-#PKG_SOURCE_PROTO:=git
-#
-#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-src.tar.gz
-#PKG_SOURCE_URL:=https://git.allseenalliance.org/gerrit/core/ajtcl.git
-#PKG_SOURCE_VERSION:=$(PKG_REVISION)
-#PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+# PKG_SOURCE_PROTO:=git
+# PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-src.tar.gz
+# PKG_REVISION:=c7246570b10c70913c2b983b5f9353672908f73d
+# PKG_SOURCE_URL:=https://git.allseenalliance.org/gerrit/core/ajtcl.git
+# PKG_SOURCE_VERSION:=$(PKG_REVISION)
+# PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
-PKG_SOURCE:=ajtcl-master.tar.gz
+# PKG_BUILD_DIR:=$(BUILD_DIR)/ajtcl-master
+PKG_SOURCE:=ajtcl-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/core/ajtcl.git/snapshot/
-PKG_BUILD_DIR:=$(BUILD_DIR)/ajtcl-master
 
 # SCons supports parallel builds but does not support make's jobserver
 PKG_BUILD_PARALLEL:=$(if $(CONFIG_PKG_BUILD_USE_JOBSERVER),0,1)
