--- a/package/uboot-linino/Makefile
+++ b/package/uboot-linino/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=linino
 PKG_RELEASE:=4
 PKG_MD5SUM:=
 
-PKG_REVISION:=4f5d9980a267302d9984a269a8fe077bb39663f5
+PKG_REVISION:=2996c85646d4e1afe2aa11d8f1c90d808dd76d6d
 
 PKG_SOURCE_PROTO:=git
 
@@ -51,7 +51,7 @@ define uboot/linino-freedog
   TITLE:=U-boot for Linino project
 endef
 
-define uboot/linino-chowchow
+define uboot/linino-lei
   TITLE:=U-boot for Linino project
 endef
 
@@ -59,7 +59,11 @@ define uboot/linino-chiwawa
   TITLE:=U-boot for Linino project
 endef
 
-UBOOTS:=linino-yun linino-one linino-freedog linino-chowchow linino-chiwawa linino-yun-mini
+define uboot/linino-chiwawa-101
+  TITLE:=U-boot for Linino project
+endef
+
+UBOOTS:=linino-yun linino-one linino-freedog linino-lei linino-chiwawa linino-chiwawa-101 linino-yun-mini
 
 define Package/uboot/template
 define Package/uboot-ar71xx-$(1)
