fixing alljoyn-js broken build

--- a/package/linino/ajtcl-alljoynjs/Makefile
+++ b/package/linino/ajtcl-alljoynjs/Makefile
@@ -5,16 +5,17 @@ PKG_VERSION:=15.04.x
 PKG_RELEASE:=1
 
 # PKG_REVISION:=992638d3cddff3ec4783c25e946833063b94bffd
+PKG_REVISION:=278a95181254f65fd9191a2d6c3d5fc3ed6dc8d2
 # PKG_SOURCE_PROTO:=git
 
-PKG_SOURCE:=alljoyn-js-master.tar.gz
-PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/core/alljoyn-js.git/snapshot
+PKG_SOURCE:=alljoyn-js-$(PKG_REVISION).tar.gz
+PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/core/alljoyn-js.git/snapshot/
 
 # PKG_SOURCE_VERSION:=$(PKG_REVISION)
 # PKG_SOURCE_URL:=https://git.allseenalliance.org/gerrit/core/alljoyn-js.git
 # PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/alljoyn-js-master
+PKG_BUILD_DIR:=$(BUILD_DIR)/alljoyn-js-$(PKG_REVISION)
 
 # SCons supports parallel builds but does not support make's jobserver
 PKG_BUILD_PARALLEL:=$(if $(CONFIG_PKG_BUILD_USE_JOBSERVER),0,1)
@@ -60,11 +61,6 @@ endif
 define Build/Configure/Default
 	# Override default to do nothing
 endef
-
-TARGET_CFLAGS += \
-	-Wno-error \
-	-Wno-unused-function \
-	-Wno-implicit-function-declaration
 
 define Build/Compile
 	CROSS_CFLAGS="-I$(STAGING_DIR)/usr/src/duktape/src -I$(STAGING_DIR)/usr/include/ajtcl $(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(TARGET_CPPFLAGS)" \
