radio0 is now default for all boards; luci reverted to v0.11; changing ChowChow entries to Lei

--- a/package/linino/avrdude/files/avrdude.conf
+++ b/package/linino/avrdude/files/avrdude.conf
@@ -995,10 +995,10 @@ programmer
   miso  = 8;
 ;
 
-# programmer for Linino ChowChow
+# programmer for Linino Lei
 
 programmer
-  id    = "linuxgpio-chow";
+  id    = "linuxgpio-lei";
   desc  = "Use the Linux sysfs interface to bitbang GPIO lines";
   type  = "linuxgpio";
   reset = 17;
