--- a/package/linino/yun-scripts/Makefile
+++ b/package/linino/yun-scripts/Makefile
@@ -16,7 +16,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/yun-scripts
   SECTION:=utils
   CATEGORY:=Base system
-  TITLE:=Custom Yún scripts
+  TITLE:=Custom Yun scripts
   DEPENDS:=+kmod-loop
 endef
 
@@ -70,7 +70,6 @@ define Package/yun-scripts/install
 	$(INSTALL_BIN) ./files/etc/init.d/alljoynfixboot $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/avahifixboot $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/mcuio $(1)/etc/init.d
-	$(INSTALL_BIN) ./files/etc/init.d/rename-iface $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/console $(1)/etc/init.d
 endef
 
