alljoyns is now set to Fix build errors for LininoIO; disabling crtmpserver

--- a/package/linino/ajtcl-alljoynjs/Makefile
+++ b/package/linino/ajtcl-alljoynjs/Makefile
@@ -1,11 +1,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ajtcl-alljoynjs
-PKG_VERSION:=150529
-PKG_RELEASE:=1
+PKG_VERSION:=150831
+PKG_RELEASE:=2
 
 # PKG_REVISION:=0ec4242d726df6f09f780a1448ad5ee424b790a4
-PKG_REVISION:=e6524e1f3004bf2bb7cdb58f647f88c505e8d1fc
+# PKG_REVISION:=ab5afcfded9d723714528075e5895eed9ffd1983 # (17 Jun)
+PKG_REVISION:=1303a77588209808d682faf7fb5ff14bf8088a40
 
 # PKG_SOURCE_PROTO:=git
 
