adding MD5 shasum to alljoyn-js sources

--- a/package/linino/ajtcl-services/Makefile
+++ b/package/linino/ajtcl-services/Makefile
@@ -3,7 +3,7 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=ajtcl-services
 PKG_VERSION:=15.04
 PKG_RELEASE:=1
-PKG_MD5SUM:=
+PKG_MD5SUM:=cf83d93511ed1dd21c285fe7a56865e
 
 # PKG_SOURCE_PROTO:=git
 # PKG_REVISION:=17d0de166022b5a56f9e09a7faffbf40ee241080
