--- a/package/linino/ajtcl/Makefile
+++ b/package/linino/ajtcl/Makefile
@@ -3,7 +3,7 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=ajtcl
 PKG_VERSION:=15.04b
 PKG_RELEASE:=1
-PKG_MD5SUM:=
+PKG_MD5SUM:=44c61bff40b4114077ffa04d49c820c6
 
 # PKG_SOURCE_PROTO:=git
 # PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-src.tar.gz
