--- a/package/linino/avrdude/Makefile
+++ b/package/linino/avrdude/Makefile
@@ -8,16 +8,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=avrdude
-PKG_VER:=6.1
-PKG_REV:=1353
-PKG_VERSION:=$(PKG_VER)-r$(PKG_REV)
-PKG_RELEASE:=1
+PKG_VERSION:=6.1
+PKG_RELEASE:=2
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://svn.savannah.nongnu.org/svn/avrdude/trunk/avrdude
-PKG_SOURCE_SUBDIR:=avrdude-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=$(PKG_REV)
-PKG_SOURCE_PROTO:=svn
+PKG_SOURCE_URL:=http://download.savannah.gnu.org/releases/avrdude
+PKG_MD5SUM:=9db8c25b935d34234b9b1ba16ad55fd5
+
+PKG_MAINTAINER:=Ted Hess <thess@kitschensync.net>
+PKG_LICENSE:=GPL-2.0
+PKG_LICENSE_FILES:=COPYING
+
+PKG_FIXUP:=autoreconf
+PKG_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -26,34 +29,19 @@ define Package/avrdude
   CATEGORY:=Utilities
   TITLE:=AVR Downloader/UploaDEr
   URL:=http://www.bsdhome.com/avrdude/
-  DEPENDS:=+libncurses +libreadline +libusb-compat +libc +libelf1 +libftdi1 $(CXX_DEPENDS)
+  DEPENDS:=+libncurses +libreadline +libusb-compat +libc +libelf +libftdi1 $(CXX_DEPENDS)
 endef
 
 define Package/avrdude/description
  AVRDUDE is a full featured program for programming Atmel's AVR CPU's.
 endef
 
-define Build/Configure
-endef
-
-define Build/Prepare
-	$(call Build/Prepare/Default)
-	chmod -R u+w $(PKG_BUILD_DIR)
-	(cd $(PKG_BUILD_DIR);./bootstrap)
-	$(call Build/Configure/Default)
-endef
 
 CONFIGURE_ARGS+= \
 	--enable-shared \
 	--disable-static \
 	--disable-parport \
 	--enable-linuxgpio \
-
-define Build/Compile
-	$(MAKE) -C $(PKG_BUILD_DIR) \
-		DESTDIR="$(PKG_INSTALL_DIR)" \
-		all 
-endef
 
 define Package/avrdude/conffiles
 /etc/avrdude.conf
