--- a/feeds.conf
+++ b/feeds.conf
@@ -1,11 +1,13 @@
-src-svn packages svn://svn.openwrt.org/openwrt/branches/packages_12.09
+#src-svn packages svn://svn.openwrt.org/openwrt/branches/packages_12.09
+src-git packages https://git.openwrt.org/12.09/packages.git;master
 src-svn xwrt http://x-wrt.googlecode.com/svn/trunk/package
 # src-svn luci http://svn.luci.subsignal.org/luci/branches/luci-0.11/contrib/package
 src-git luci https://github.com/openwrt/luci.git;luci-0.11
 src-git routing git://github.com/openwrt-routing/packages.git;for-12.09.x
 #src-svn phone svn://svn.openwrt.org/openwrt/feeds/phone
 #src-svn efl svn://svn.openwrt.org/openwrt/feeds/efl
-src-svn xorg svn://svn.openwrt.org/openwrt/feeds/xorg
+#src-svn xorg svn://svn.openwrt.org/openwrt/feeds/xorg
+src-git oldfeeds https://github.com/artynet/openwrt-old-feeds.git;1209
 #src-svn desktop svn://svn.openwrt.org/openwrt/feeds/desktop
 #src-svn xfce svn://svn.openwrt.org/openwrt/feeds/xfce
 #src-svn lxde svn://svn.openwrt.org/openwrt/feeds/lxde
