updating ciao, ffmpeg and node-canvas

--- a/package/linino/ciao/Makefile
+++ b/package/linino/ciao/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ciao
-PKG_REVISION:=47d7794cbcfd315c3481a09c8c8f64ac442b9c6e
-PKG_VERSION:=0.0.2
+PKG_REVISION:=21b7161cbdc0a7dbb23b621f5087cfe168080219
+PKG_VERSION:=0.0.4
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
@@ -40,10 +40,19 @@ define Download/sleekxmpp
 	MD5SUM:=9a49f33ce532f92c58e569342b951e65
 endef
 
+define Download/webfiles
+	URL:=https://github.com/artynet/BraccioRemote/archive/
+	FILE:=BraccioRemote-v1.0.0.tar.gz
+	# MD5SUM:=6bc0d308bc6ba978e98e9d6aee12c889
+endef
+
 define Build/Prepare
 	$(call Build/Prepare/Default)
 	$(eval $(call Download,sleekxmpp))
 	$(TAR) -xvf $(DL_DIR)/sleekxmpp.tar.gz -C $(PKG_BUILD_DIR)
+	$(eval $(call Download,webfiles))
+	mkdir $(PKG_BUILD_DIR)/www
+	$(TAR) -xvf $(DL_DIR)/BraccioRemote-v1.0.0.tar.gz -C $(PKG_BUILD_DIR)/www --strip-components=1
 endef
 
 define Build/Compile
@@ -57,14 +66,8 @@ define Package/ciao/install
 	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/conf
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ciao/conf/*.conf $(1)/usr/lib/python2.7/ciao/conf
 
-	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/connectors/xmpp
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/ciao/connectors/xmpp/* $(1)/usr/lib/python2.7/ciao/connectors/xmpp
-
-	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/connectors/mqtt
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/ciao/connectors/mqtt/* $(1)/usr/lib/python2.7/ciao/connectors/mqtt
-
-	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/connectors/phant
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/ciao/connectors/phant/* $(1)/usr/lib/python2.7/ciao/connectors/phant
+	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/connectors
+	$(CP) -r $(PKG_BUILD_DIR)/ciao/connectors/* $(1)/usr/lib/python2.7/ciao/connectors
 
 	# Installing run-ciao script in /usr/bin
 	$(INSTALL_DIR) $(1)/usr/bin
@@ -76,6 +79,10 @@ define Package/ciao/install
 
 	# Installing ciaotools.py
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ciaotools.py $(1)/usr/lib/python2.7
+	
+	# Installing web pages
+	$(INSTALL_DIR) $(1)/www/braccio
+	$(CP) -r $(PKG_BUILD_DIR)/www/* $(1)/www/braccio
 endef
 
 define Package/ciao/postinst
@@ -87,8 +94,14 @@ then
 	echo "kernel.printk = 3 4 1 3" >> /etc/sysctl.conf
 	/sbin/sysctl -p 2>&1 /dev/null
 fi
-endef
 
+FILE=$${IPKG_INSTROOT}/usr/lib/python2.7/ciao/conf/restserver.json.conf
+
+if [ -e $${FILE} ]
+then
+    sed -i -e '1,/false/s/false/true/' $${FILE}
+fi
+endef
 
 define Package/ciao/postrm
 #!/bin/sh
