--- a/package/opkg/Makefile
+++ b/package/opkg/Makefile
@@ -13,11 +13,15 @@ PKG_REV:=618
 PKG_VERSION:=$(PKG_REV)
 PKG_RELEASE:=3.dh1
 
-PKG_SOURCE_PROTO:=svn
-PKG_SOURCE_VERSION:=$(PKG_REV)
-PKG_SOURCE_SUBDIR:=opkg-$(PKG_VERSION)
+# PKG_SOURCE_PROTO:=svn
+# PKG_SOURCE_VERSION:=$(PKG_REV)
+# PKG_SOURCE_SUBDIR:=opkg-$(PKG_VERSION)
+
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_REV).tar.gz
 PKG_SOURCE_URL:=http://opkg.googlecode.com/svn/trunk/
-PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
+
+#PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
+
 PKG_FIXUP:=autoreconf
 PKG_REMOVE_FILES = autogen.sh aclocal.m4
 
