new feed : ciao connectors

--- a/feeds.conf
+++ b/feeds.conf
@@ -8,6 +8,7 @@ src-git routing git://github.com/openwrt-routing/packages.git;for-12.09.x
 #src-svn efl svn://svn.openwrt.org/openwrt/feeds/efl
 #src-svn xorg svn://svn.openwrt.org/openwrt/feeds/xorg
 src-git oldfeeds https://github.com/artynet/openwrt-old-feeds.git;1209
+src-git connectors https://github.com/arduino-org/ciao-connectors.git;master
 #src-svn desktop svn://svn.openwrt.org/openwrt/feeds/desktop
 #src-svn xfce svn://svn.openwrt.org/openwrt/feeds/xfce
 #src-svn lxde svn://svn.openwrt.org/openwrt/feeds/lxde
