updating ArduinoOS to v2.0.3

--- a/package/linino/arduinoos/Makefile
+++ b/package/linino/arduinoos/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=arduinoos
-PKG_VERSION:=2.0.2
-PKG_REVISION:=36c0e0b
-PKG_RELEASE:=4
+PKG_VERSION:=2.0.3
+PKG_REVISION:=2ec5e2a
+PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_REVISION).tar.gz
 PKG_SOURCE_URL:=http://download.linino.org/sources
-PKG_MD5SUM:=dee13fa79994373f9ca1e7bf86f871c7
+# PKG_MD5SUM:=dee13fa79994373f9ca1e7bf86f871c7
 PKG_BUILD_DIR:=$(BUILD_DIR)/arduinoos-$(PKG_VERSION)-$(PKG_REVISION)
 
 include $(INCLUDE_DIR)/package.mk
