--- a/package/linino/ciao/Makefile
+++ b/package/linino/ciao/Makefile
@@ -10,16 +10,14 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=ciao
 PKG_REVISION:=e0a169cd87006f8a265b337cb66362b07566f7d7
 PKG_VERSION:=0.1.0
-PKG_RELEASE:=3
+PKG_RELEASE:=4
 
 PKG_SOURCE_PROTO:=git
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_REVISION).tar.gz
 PKG_SOURCE_URL:=https://github.com/arduino-org/Ciao.git
 PKG_SOURCE_VERSION:=$(PKG_REVISION)
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_REVISION)
-
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_REVISION)
+PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -35,13 +33,18 @@ define Package/ciao/description
  The new Ciao Bridge lets linux and arduino communicate
 endef
 
+define Build/Prepare
+	$(call Build/Prepare/Default)
+	find $(PKG_BUILD_DIR)/ciao/connectors -name "*.py" -exec chmod +x {} \;
+endef
+
 define Build/Compile
 	# NOOP
 endef
 
 define Package/ciao/install
 	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ciao/*.py $(1)/usr/lib/python2.7/ciao
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/ciao/*.py $(1)/usr/lib/python2.7/ciao
 	
 	$(INSTALL_DIR) $(1)/usr/lib/python2.7/ciao/conf
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ciao/conf/*.conf $(1)/usr/lib/python2.7/ciao/conf
@@ -54,7 +57,7 @@ define Package/ciao/install
 	$(INSTALL_BIN) ./files/run-ciao $(1)/usr/bin
 
 	# Installing ciaotools.py
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ciaotools.py $(1)/usr/lib/python2.7
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/ciaotools.py $(1)/usr/lib/python2.7
 endef
 
 define Package/ciao/postinst
