--- a/package/linino/node-jsonfile/Makefile
+++ b/package/linino/node-jsonfile/Makefile
@@ -13,7 +13,7 @@ PKG_VERSION:=2.2.3
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
-PKG_SOURCE_URL:=http://registry.nodejitsu.com/$(PKG_NPM_NAME)/-/
+PKG_SOURCE_URL:=http://registry.npmjs.org/$(PKG_NPM_NAME)/-/
 # PKG_MD5SUM:=5ccd4dc0a91e83aaa4bcdd9ff3b8080d
 
 PKG_BUILD_DEPENDS:=node
