--- a/package/linino/node-serialport/Makefile
+++ b/package/linino/node-serialport/Makefile
@@ -13,7 +13,7 @@ PKG_VERSION:=2.0.6
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
-PKG_SOURCE_URL:=http://registry.nodejitsu.com/$(PKG_NPM_NAME)/-/
+PKG_SOURCE_URL:=http://registry.npmjs.org/$(PKG_NPM_NAME)/-/
 # PKG_MD5SUM:=c8bcbcab26ed717907268fad666c42de
 
 PKG_BUILD_DEPENDS:=node
