updating npm as final Prepare step in node

--- a/package/linino/node/Makefile
+++ b/package/linino/node/Makefile
@@ -58,6 +58,7 @@ define Build/Prepare
 	);
 	$(eval $(call Download,nodebin))
 	$(TAR) -xvf $(DL_DIR)/$(NODEJS) -C $(STAGING_DIR_HOST) --strip-components=1
+	$(STAGING_DIR_HOST)/bin/npm update npm -g $(STAGING_DIR_HOST)/lib/node_modules
 endef
 
 define Build/Configure
